--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "dangerously-set-html-content": "^1.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -39,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-grid-layout": "^1.3.4",
+    "clsx": "^2.0.0",
+    "react-grid-layout": "^1.4.2",
+    "tailwindcss": "^3.3.5"
   }
 }
