--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "dangerously-set-html-content": "^1.0.13",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-grid-layout": "^1.3.4",
     "clsx": "^2.0.0",
     "react-grid-layout": "^1.4.2",
